Updated login page to welcome page.

--- a/src/pages/auth/welcome.page.html
+++ b/src/pages/auth/welcome.page.html
@@ -1,4 +1,4 @@
-<ion-content class="login-page">
+<ion-content class="welcome-page">
 
   <div class="welcome-buttons" padding-horizontal text-center>
     <button ion-button block color="secondary" class="login-button">Login</button><br>
