--- a/src/pages/auth/welcome.page.html
+++ b/src/pages/auth/welcome.page.html
@@ -2,6 +2,9 @@
 
   <div class="welcome-buttons" padding-horizontal text-center>
     <button ion-button block color="secondary" class="login-button">Login</button><br>
-    <button ion-button block color="secondary" class="sign-up-button">Sign Up</button>
+    <button ion-button block
+      color="secondary"
+      class="sign-up-button"
+      (click)="goToSignUp()">Sign Up</button>
   </div>
 </ion-content>
