Added login page.

--- a/src/pages/auth/login.page.html
+++ b/src/pages/auth/login.page.html
@@ -7,20 +7,13 @@
       </ion-buttons>
   </ion-header>
 
-  <div class="errors-signup" *ngIf="errors">
-    {{ errors[0] }}
+  <div class="errors">
+    {{ errors }}
   </div>
 
-  <form class="auth-form sign-up-form" padding-left padding-right [formGroup]="form"
-    (submit)="register()">
+  <form class="auth-form login-form" padding-left padding-right [formGroup]="form"
+    (submit)="login()">
     <ion-list>
-      <ion-item>
-        <ion-input type="text" required
-          placeholder="Username"
-          formControlName="username">
-        </ion-input>
-      </ion-item>
-
       <ion-item>
         <ion-input type="email" required
           placeholder="Email"
@@ -37,8 +30,8 @@
     </ion-list>
 
     <button ion-button color="secondary" block
-      [disabled]="!form.valid || loading" (click)="register()">
-      <span *ngIf="!loading">Create Account</span>
+      [disabled]="!form.valid || loading" (click)="login()">
+      <span *ngIf="!loading">Login</span>
       <span *ngIf="loading">Loading</span>
     </button>
 
