--- a/src/pages/auth/welcome.page.html
+++ b/src/pages/auth/welcome.page.html
@@ -1,7 +1,10 @@
 <ion-content class="welcome-page">
 
   <div class="welcome-buttons" padding-horizontal text-center>
-    <button ion-button block color="secondary" class="login-button">Login</button><br>
+    <button ion-button block
+      color="secondary"
+      class="login-button"
+      (click)="goToLogin()">Login</button><br>
     <button ion-button block
       color="secondary"
       class="sign-up-button"
