Added profile page.

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs tabsHighlight="true">
-  <ion-tab [root]="tab1Root" tabIcon="ios-search-outline" color="white"></ion-tab>
+  <ion-tab [root]="tab1Root" tabIcon="ios-search" color="white"></ion-tab>
   <ion-tab [root]="tab2Root" tabIcon="person" color="white"></ion-tab>
 </ion-tabs>
