--- a/src/pages/auth/welcome.page.html
+++ b/src/pages/auth/welcome.page.html
@@ -2,11 +2,11 @@
 
   <div class="welcome-buttons" padding-horizontal text-center>
     <button ion-button block
-      color="secondary"
+      color="green"
       class="login-button"
       (click)="goToLogin()">Login</button><br>
     <button ion-button block
-      color="secondary"
+      color="green"
       class="sign-up-button"
       (click)="goToSignUp()">Sign Up</button>
   </div>
