Added Profile info page with functionality. Added profile edit page

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,3 +1,11 @@
 <ion-content padding class="profile-page">
+  <ion-buttons end>
+    <button ion-button clear color="white" (click)="goToInfo()">
+      <strong style="font-size: 20px">Info</strong>
+    </button>
+  </ion-buttons>
 
+  <div text-center>
+    <ion-icon name="person" class="profile-icon"></ion-icon>
+  </div>
 </ion-content>
