--- a/src/pages/profile/profile-edit.page.html
+++ b/src/pages/profile/profile-edit.page.html
@@ -3,5 +3,56 @@
     <button ion-button clear color="white" navPop>
       <strong style="font-size: 20px">Back</strong>
     </button>
+
+    <button end ion-button clear color="white" (click)="update()" style="float:right;">
+      <strong style="font-size:20px;">Update</strong>
+    </button>
   </ion-buttons>
+
+  <form *ngIf="form"
+    [formGroup]="form">
+      <ion-list>
+        <ion-item>
+          <ion-label>Username</ion-label>
+          <ion-input type="text"
+            formControlName="username" required>
+           </ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>First Name</ion-label>
+          <ion-input type="text"
+            formControlName="first_name">
+           </ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Last Name</ion-label>
+          <ion-input type="text"
+            formControlName="last_name">
+           </ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Email</ion-label>
+          <ion-input type="email"
+            formControlName="email" required>
+           </ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>City</ion-label>
+          <ion-input type="text"
+            formControlName="city">
+           </ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>State</ion-label>
+          <ion-input type="text"
+            formControlName="state">
+           </ion-input>
+        </ion-item>
+      </ion-list>
+  </form>
 </ion-content>
