--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,30 @@
 <ion-header>
-  <ion-searchbar></ion-searchbar>
+    <ion-searchbar (ionInput)="search($event)"></ion-searchbar>
 </ion-header>
 
 <ion-content padding class="home-page">
+  <ion-list [hidden]="!users?.length">
+    <ion-item detail-none  *ngFor="let user of users">
+      <ion-avatar item-left>
+        <img *ngIf="user.profile_image" class="profile-image" [src]="user.profile_image">
 
+        <ion-icon *ngIf="!user.profile_image"  name="person" class="profile-icon"></ion-icon>
+      </ion-avatar>
+
+      <h2>@{{ user.username }}</h2>
+
+      <button ion-button item-right clear color="primary-blue"
+        (click)="requestConnection(user)" *ngIf="!user.is_connected">
+
+      </button>
+
+      <ion-icon class="app-icon-matches" color="gray-light" item-right
+        *ngIf="user.is_connected">
+      </ion-icon>
+    </ion-item>
+  </ion-list>
+
+  <p padding text-center [hidden]="!users || users?.length">
+    No results found
+  </p>
 </ion-content>
