--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -12,7 +12,7 @@
       <ion-icon *ngIf="!user.profile_image"  name="person" class="profile-icon"></ion-icon>
     </div>
 
-    <h1 no-margin color="white" text-center>{{ user.username }}</h1>
+    <h1 ion-text no-margin color="white" text-center>{{ user.username }}</h1>
   </div>
 
 </ion-content>
